--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
 
-    <title>Node Express Joke Book</title>
-    <script src="vendor/jquery.min.js" type="text/javascript"></script>
-    <script src="scripts/client.js" type="text/javascript"></script>
+  <title>Node Express Joke Book</title>
+  <script src="vendor/jquery.min.js" type="text/javascript"></script>
+  <script src="scripts/client.js" type="text/javascript"></script>
 
-  </head>
-  <body>
-    <h1>Node Express Joke Book</h1>
+</head>
+<body>
+
+  <h1>Node Express Joke Book</h1>
+
+  <h2>Share Your Joke!</h2>
+
+    <form id="jokeInput"></form>
+    <input id="jokerNameInput" placeholder = "Your Name">
+    <input id="jokerJokeInput" placeholder = "Your Joke">
+    <input id="jokerPunchlineInput" placeholder = "Punchline">
+    <button id="submitJoke">have a giggle m8</button>
+
+  <h2 id="appendJokes">current</h2>
 
   </body>
-</html>
+  </html>
